# nucleus-google-ads-framework

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.production  Google Ads Automation — Codex Quickstart.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOY.md  SETUP.md  docker-compose.development.yml  docker-compose.production.yml  docker-compose.vault.yml  docker-compose.yml  docker-entrypoint-dev.sh  pyproject.toml  readme.md  setup.py
apps/: __init__.py  api_server.py
core/: __init__.py  cache.py  errors.py  google_ads_manager.py  quota.py  scheduler.py
docker/: entrypoint.sh  vault-entrypoint.sh  vault-init.sh
docs/: OPERATIONS.md  PRODUCTION_VERIFICATION.md
infra/: ads-api.service  nginx-production.conf  nginx.conf  postgres.sql  redis.conf
scripts/: README.md  deploy-production.sh  deploy.sh  monitor.sh  setup-nginx.sh  setup-vault-secrets.sh  smoke-test.sh  verify-production.sh
security/: __init__.py  auth.py
tests/: __init__.py  test_cache.py  test_quota.py
